shift main page right to avoid sidebar overlap

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,8 @@
 #root {
   /* max-width: 1280px; */
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  margin-left: 10%;
+  width: 100%;
   /* padding: 2rem; */
   text-align: center;
 }
@@ -46,13 +48,6 @@ dialog {
   border-radius: 10px;
   padding: 1rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 8px;
 }
 
 .form-container > div {
